Fixing della vecchia preview del catalogo in home, card visibili, manca immagine

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2608,15 +2608,21 @@ line-height: 1.4; /* riduci questo valore per avvicinare le due righe */
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 2fr 1fr 1fr;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  height: 300px;
 }
+.catalog-item-img {
+  overflow: hidden;
+}
+
 .catalog-item-img img {
   width: 100%;
-  height:100%;
+  height: 100%;
   object-fit: cover;
 }
+
 
 .catalog-item-title {
   flex: 1 0 0;
@@ -2626,15 +2632,18 @@ line-height: 1.4; /* riduci questo valore per avvicinare le due righe */
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  margin: 0;
   padding: 0 12px;
 
 }
 .catalog-item-desc {
-  flex: 1 0 0;
-  font-size: 0.9rem;
-  color: #666;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
   padding: 0 12px 12px 12px;
-  overflow: hidden;
 }
 .catalog-list .catalog-item-btn {
   padding: 0.75rem 1.5rem;
